# boxlite

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  package.json
.claude/: settings.json
.claude/agents/: claude-md-auditor.md  commit-push-auditor.md  verdict-auditor.md
.claude/hooks/: preflight-claude-md.sh  preflight-claude-md.test.sh  preflight-commit-push.sh  preflight-commit-push.test.sh  preflight-pr-review.sh  preflight-pr-review.test.sh  preflight-verdict-check.sh  preflight-verdict-check.test.sh  rule-recency.sh  rule-recency.test.sh  run-verdict-audit.sh
.config/: nextest.toml
.githooks/: githooks.test.sh  install.sh  pre-commit  pre-push
.github/workflows/: README.md  build-go.yml  build-node.yml  build-runner-binary.yml  build-runtime.yml  build-wheels.yml  codeql.yml  config.yml  e2e-local.yml  e2e-test.yml  lint.yml  test.yml  warm-caches.yml
apps/: CLAUDE.md  NOTICE  eslint.config.mjs  go.work  go.work.sum  nx.json  package.json  tsconfig.base.json
apps/api-client-go/: api_admin.go  api_api_keys.go  api_audit.go  api_config.go  api_docker_registry.go  api_health.go  api_jobs.go  api_object_storage.go  api_organizations.go  (+192 more)
boxlite/: Cargo.toml  build.rs
boxlite-cli/: Cargo.toml  README.md
boxlite-server/: Cargo.toml
boxlite-test-utils/: Cargo.toml
docs/: faq.md
guest/: Cargo.toml
make/: build.mk  changes.mk  dev.mk  dist.mk  help.mk  quality.mk  test.mk
openapi/: box.openapi.yaml  rest-sandbox-open-api.yaml
scripts/: clean.sh
(+2142 files in other folders)
