[workspace]
members = [
    "src/boxlite",
    "src/cli",
    "src/shared",
    "src/guest",
    "src/shim",
    "src/test-utils",
    "src/deps/bubblewrap-sys",
    "src/deps/e2fsprogs-sys",
    "src/deps/libgvproxy-sys",
    "src/deps/libkrun-sys",
    "sdks/c",
    "sdks/python",
    "sdks/node",
]
exclude = ["build/tmp", "target", ".venv", "examples/*/.venv"]

resolver = "2"

[workspace.dependencies]
boxlite = { path = "src/boxlite", version = "0.9.4" }
boxlite-shared = { path = "src/shared", version = "0.9.4" }
bubblewrap-sys = { path = "src/deps/bubblewrap-sys", version = "0.9.4" }
e2fsprogs-sys = { path = "src/deps/e2fsprogs-sys", version = "0.9.4" }
libgvproxy-sys = { path = "src/deps/libgvproxy-sys", version = "0.9.4" }
libkrun-sys = { path = "src/deps/libkrun-sys", version = "0.9.4" }

[workspace.package]
version = "0.9.4"
edition = "2024"
authors = ["Dorian Zheng <https://github.com/dorianzheng>"]
license = "Apache-2.0"
rust-version = "1.88"
